manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tttt
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: tttt
          command: [ "java","-jar","/app.jar" ]
          args: [ "--spring.config.location=file:/config/application.yml" ]
          volumeMounts:
            - mountPath: /mnt/cloud-sample
              name: 82273952-volume
              readOnly: false
              subPath: cloud-sample
            - mountPath: /config
              name: application-properties
              readOnly: true

      volumes:
        - name: 82273952-volume
          persistentVolumeClaim:
            claimName: cepg-aa-std-pvc
        - name: application-properties
          configMap:
            name: 82273952-configmap
            items:
              - key: application.yml
                path: application.yml
            defaultMode: 420
