manifests/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82273952-ingress
spec:
  ingressClassName: ingress-internal
  rules:
    - host: tttt-82273952.ce-aa.kubepia.net
      http:
        paths:
          - path: /
            backend:
              service:
                name: "82273952-svc"
                port:
                  number: 8080
            pathType: Prefix
